--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,19 @@
-# DON'T EDIT THIS!
-#
-# Codecrafters relies on this file being intact to run tests successfully. Any changes
-# here will not reflect when CodeCrafters tests your code, and might even cause build
-# failures.
-#
-# DON'T EDIT THIS!
 [package]
-name = "git-starter-rust"
+name = "basic-rust-git"
 version = "0.1.0"
-authors = ["Codecrafters <hello@codecrafters.io>"]
+authors = ["Christophe Rosset"]
 edition = "2021"
 
-# DON'T EDIT THIS!
-#
-# Codecrafters relies on this file being intact to run tests successfully. Any changes
-# here will not reflect when CodeCrafters tests your code, and might even cause build
-# failures.
-#
-# DON'T EDIT THIS!
 [dependencies]
-reqwest = { version = "0.11.13", features = ["json", "blocking"] } # http requests
-bytes = "1.3.0"                                                    # helps wrap responses from reqwest
-tokio = { version = "1.23.0", features = ["full"] }                # async http requests
-clap = { version = "4.0.32", features = ["derive"]}                # creating a cli
-flate2 = "1.0"                                                     # gzip compression
-sha1 = "0.10.1"                                                    # hashing
-hex = "0.4.3"                                                      # working with hash output
-anyhow = "1.0.59"                                                  # error handling
-thiserror = "1.0.32"                                               # error handling
+reqwest = { version = "0.11.13", features = [
+  "json",
+  "blocking",
+] } # http requests
+bytes = "1.3.0" # helps wrap responses from reqwest
+tokio = { version = "1.23.0", features = ["full"] } # async http requests
+clap = { version = "4.0.32", features = ["derive"] } # creating a cli
+flate2 = "1.0" # gzip compression
+sha1 = "0.10.1" # hashing
+hex = "0.4.3" # working with hash output
+anyhow = "1.0.59" # error handling
+thiserror = "1.0.32" # error handling
