--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ sha1 = "0.10.1" # hashing
 hex = "0.4.3" # working with hash output
 anyhow = "1.0.59" # error handling
 thiserror = "1.0.32" # error handling
-nom = "7.1.3"
+bstr = "1.9.0"
