--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ hex = "0.4.3" # working with hash output
 anyhow = "1.0.59" # error handling
 thiserror = "1.0.32" # error handling
 bstr = "1.9.0"
+nom = "7.1.3"
