--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Christophe Rosset"]
 edition = "2021"
 
+[features]
+ignore_tests = []
+
 [dependencies]
 reqwest = { version = "0.11.13", features = [
   "json",
